[update] Swagger v0.2 정확한 명세 준수
프론트엔드 요구사항에 따라 모든 API를 Swagger v0.2 명세와 정확히 일치하도록 수정

## 주요 변경사항

### 1. Response 형식 수정 (빈 객체 반환)
- Swagger에서 `type: object`로 명시된 모든 엔드포인트에서 `Collections.emptyMap()` 반환
- 기존: `Map.of("message", "...")` → 수정: `Collections.emptyMap()` (빈 객체 `{}`)
- 영향받은 컨트롤러:
  - AuthController: 모든 POST 엔드포인트 (register-email, register-verificationCode, register, logout, password/reset-*)
  - SiteController: DELETE /api/site
  - UserController: DELETE /api/users/me
  - ReportController: POST /api/report/data

### 2. Swagger에 없는 컨트롤러 삭제
- AdditionalDataController 삭제 (전체)
- DisasterHistoryController 삭제 (전체)
- RecommendationController 삭제 (전체)

### 3. ReportController 엔드포인트 수정
- POST /api/report 삭제 (Swagger에 없음)
- GET /api/report 추가 (통합 리포트 조회)
- GET /api/report/web 삭제
- GET /api/report/pdf 삭제
- DELETE /api/report 삭제
- POST /api/report/data 유지 (빈 객체 반환하도록 수정)

### 4. SimulationController 경로 수정
- POST /api/simulation/relocation/compare → POST /api/simulation/location/compare
- GET /api/simulation/location/recommendation 추가

### 5. ReportService 메서드 수정
- getReport() 추가 (더미 데이터 반환, FastAPI 구현 대기)
- createReport(), getReportWebView(), getReportPdf(), deleteReport() 삭제
- 불필요한 의존성 제거 (FastApiClient, ObjectMapper)

### 6. SimulationService 메서드 추가
- getLocationRecommendation() 추가 (더미 데이터 반환, FastAPI 구현 대기)
- compareRelocation() → compareLocation()으로 이름 변경

## 빌드 상태
✅ BUILD SUCCESS

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>